--- a/options.html
+++ b/options.html
@@ -1049,11 +1049,11 @@
 
                             container.space({ height: "1em" });
 
-                            container.text("We do not track your search queries or window titles.");
+                            container.text("This information is anonymous and is used solely to improve Tab Organizer.");
 
                             container.space({ height: "1em" });
 
-                            container.text("This information is anonymous and is used solely to improve Tab Organizer.");
+                            container.text("You can learn more about what we track <a href='http://documentation.tab-organizer.googlecode.com/hg/Tab%20Organizer%20FAQ.html#can-you-explain-usage-tracking'>here</a>.");
 
                             container.space({ height: "1.25em" });
 
