Adding in un/pin tabs functionality.

--- a/options.html
+++ b/options.html
@@ -1204,6 +1204,11 @@
                             });
 
                             container.input("checkbox", {
+                                option: "undo.pin-tabs",
+                                text: "Un/pinning tabs"
+                            });
+
+                            container.input("checkbox", {
                                 option: "undo.move-tabs",
                                 text: "Moving tabs"
                             });
