--- a/background.html
+++ b/background.html
@@ -30,6 +30,7 @@
             "undo.new-tab": true,
             "undo.rename-window": true,
             "undo.select-tabs": true,
+            "undo.pin-tabs": true,
             "undo.move-tabs": true,
             "undo.close-tabs": false,
             "undo.timer": 10,
@@ -140,7 +141,7 @@
 
             "Theme": ["color.theme"],
 
-            "Undo": ["undo.new-tab", "undo.rename-window", "undo.select-tabs", "undo.move-tabs", "undo.close-tabs", "undo.timer"],
+            "Undo": ["undo.new-tab", "undo.rename-window", "undo.select-tabs", "undo.pin-tabs", "undo.move-tabs", "undo.close-tabs", "undo.timer"],
 
             "Windows": ["windows.type", "windows.grid.columns", "windows.grid.rows"],
 
