Adding in the ability to undo an "un/favorite tabs" action.

--- a/background.html
+++ b/background.html
@@ -31,6 +31,7 @@
             "undo.rename-window": true,
             "undo.select-tabs": true,
             "undo.pin-tabs": true,
+            "undo.favorite-tabs": true,
             "undo.move-tabs": true,
             "undo.close-tabs": false,
             "undo.timer": 10,
@@ -141,7 +142,7 @@
 
             "Theme": ["color.theme"],
 
-            "Undo": ["undo.new-tab", "undo.rename-window", "undo.select-tabs", "undo.pin-tabs", "undo.move-tabs", "undo.close-tabs", "undo.timer"],
+            "Undo": ["undo.new-tab", "undo.rename-window", "undo.select-tabs", "undo.pin-tabs", "undo.favorite-tabs", "undo.move-tabs", "undo.close-tabs", "undo.timer"],
 
             "Windows": ["windows.type", "windows.grid.columns", "windows.grid.rows"],
 
