--- a/options.html
+++ b/options.html
@@ -1209,6 +1209,11 @@
                             });
 
                             container.input("checkbox", {
+                                option: "undo.favorite-tabs",
+                                text: "Un/favoriting tabs"
+                            });
+
+                            container.input("checkbox", {
                                 option: "undo.move-tabs",
                                 text: "Moving tabs"
                             });
