--- a/window.html
+++ b/window.html
@@ -30,6 +30,8 @@
         *  This is to make it easier to take screenshots when the UI changes.
         *-->
     <!--!<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
+    <!--<script src="crashes.js"></script>-->
+
     <script src="/js/window.js"></script>
     <script src="/js/undo.js"></script>
   </body>
