--- a/background.html
+++ b/background.html
@@ -26,6 +26,7 @@
             "popup.hotkey.alt": false,
             "popup.hotkey.letter": "E",
             "popup.close.escape": false,
+            "popup.close.when": "manual",
 
             "undo.new-tab": true,
             "undo.rename-window": true,
