Update issue 145 Status: Pending

--- a/background.html
+++ b/background.html
@@ -133,7 +133,7 @@
 
             "Keyboard": ["popup.hotkey.ctrl", "popup.hotkey.shift", "popup.hotkey.alt", "popup.hotkey.letter"],
 
-            "Popup": ["popup.type", "popup.offsetX", "popup.offsetY", "popup.width", "popup.height"],
+            "Popup": ["popup.close.when", "popup.type", "popup.offsetX", "popup.offsetY", "popup.width", "popup.height"],
 
             "Privacy": ["usage-tracking"],
 
