Adding in the ability to close the popup when it loses focus.

--- a/options.html
+++ b/options.html
@@ -975,6 +975,9 @@
                                 }, {
                                     value: "switch-window",
                                     text: "when switching windows"
+                                }, {
+                                    value: "lose-focus",
+                                    text: "when losing focus"
                                 }]
                             });
                         });
